3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Bug fix for 1803265 - archetype conflict. Made required updates for the
Potion of invulnerability to potion of shielding name change.
--
server/branches/1.x/lib/formulae
server/branches/1.x/lib/treasures
--
RJT 2007-09-27

Face/animation related plugin functions.
---
Enable a plugin to find a face, and change face or animation. Make property
  name coherent with others.
 include/plugin.h sproto.h
 plugins/cfanim/cfanim.c
 server/plugins.c
---
Add wrapper for find_face().
 plugins/common/include/plugin_common.h
 plugins/common/plugin_common.c
---
Add Object.AnimSpeed and Object.Anim, fix face handling.
 plugins/cfpython/cfpython_object.c
 plugins/cfpython/include/cfpython_object_private.h
---
Add Crossfire.FindFace() and Crossfire.FindAnimation()
 plugins/cfpython/cfpython.c
---
 doc/Developers/python.ps: updated
Nicolas Weeger 2007-09-27

Couple bug fixes related to 1713188 - dropall performance issues.
---
include/config.h: Increase SOCKETBUFSIZE - should help reduce premature
  dropped connections.
server/c_object.c: Improve dropall logic - instead of calling fix_player() for
  each object dropped, call it just once for the entire stack - should
  improve performance considerably.  This also fixes sending updated
  weight information to the client for each object dropped (player weight
  1000, player weight 995, player weight 992, etc), so may help on dropped
  connections.
MSW 2007-09-26

common/object.c: Modify can_pick() so you are not allowed to pick up
  multipart objects.  insert_ob_in_ob() doesn't let it happen, but
  this way, at least the player gets a message.  Also cleaned up function